--- a/index.html
+++ b/index.html
@@ -154,7 +154,246 @@
             ],
             correct: 0
         },
-        // Agrega más preguntas aquí
+        {
+            question: "¿Cuál es un ejemplo típico de un ácido fuerte?",
+            answers: [
+                "Ácido acético",
+                "Ácido clorhídrico",
+                "Ácido fluorhídrico",
+                "Ácido láctico"
+            ],
+            correct: 1
+        },
+        {
+            question: "¿Qué representa la constante de disociación ácida \(K_a\)?",
+            answers: [
+                "La concentración de iones \(H^+\) en la disolución.",
+                "La relación entre las concentraciones de los productos y reactivos de la disociación de un ácido débil.",
+                "La cantidad de ácido añadido a la disolución.",
+                "La cantidad de base añadida a la disolución."
+            ],
+            correct: 1
+        },
+        {
+            question: "¿Qué se utiliza para medir la acidez o basicidad de una solución?",
+            answers: [
+                "La constante de disociación básica \(K_b\).",
+                "El potencial de hidrógeno (pH).",
+                "La concentración molar.",
+                "La temperatura de la solución."
+            ],
+            correct: 1
+        },
+        {
+            question: "En un buffer, ¿qué componentes se encuentran típicamente?",
+            answers: [
+                "Un ácido fuerte y su base conjugada.",
+                "Un ácido débil y su base conjugada.",
+                "Una base fuerte y su ácido conjugado.",
+                "Un ácido fuerte y una base fuerte."
+            ],
+            correct: 1
+        },
+        {
+            question: "¿Cuál es el valor aproximado de pH de la sangre humana?",
+            answers: [
+                "5.0",
+                "7.0",
+                "7.4",
+                "8.2"
+            ],
+            correct: 2
+        },
+        {
+            question: "¿Qué ocurre cuando se añade un ácido fuerte a una solución buffer?",
+            answers: [
+                "El pH cambia drásticamente.",
+                "El pH se mantiene casi constante.",
+                "La solución se vuelve neutra.",
+                "La solución se disocia completamente."
+            ],
+            correct: 1
+        },
+        {
+            question: "¿Qué sucede en el mar cuando se disuelve dióxido de carbono (\(CO_2\))?",
+            answers: [
+                "Se forman ácido carbónico y iones carbonato, lo que ayuda a mantener el pH.",
+                "Se aumenta el pH del agua.",
+                "El agua se vuelve ácida y disuelve el carbonato de calcio.",
+                "El dióxido de carbono se convierte directamente en ácido acético."
+            ],
+            correct: 0
+        },
+        {
+            question: "¿Cuál es la función de un buffer en el cuerpo humano?",
+            answers: [
+                "Evitar que el pH de la sangre cambie significativamente.",
+                "Aumentar la concentración de iones \(H^+\) en la sangre.",
+                "Disminuir la concentración de iones \(OH^-\) en la sangre.",
+                "Hacer que el pH de la sangre sea ácido."
+            ],
+            correct: 0
+        },
+        {
+            question: "¿Qué es un ácido débil?",
+            answers: [
+                "Un ácido que no se disocia en absoluto en agua.",
+                "Un ácido que se disocia completamente en agua.",
+                "Un ácido que se disocia parcialmente en agua.",
+                "Un ácido que reacciona con bases fuertes."
+            ],
+            correct: 2
+        },
+        {
+            question: "¿Cuál de los siguientes pares es un ejemplo de una solución buffer?",
+            answers: [
+                "\(CH_3COOH\) y \(CH_3COO^-\)",
+                "\(HCl\) y \(NaOH\)",
+                "\(NH_4Cl\) y \(NH_3\)",
+                "\(NaCl\) y \(H_2O\)"
+            ],
+            correct: 0
+        },
+        {
+            question: "¿Cuál es la fórmula para calcular el pH de una solución amortiguadora utilizando la ecuación de Henderson-Hasselbalch?",
+            answers: [
+                "pH = pK_a + log \(\frac{[base conjugada]}{[ácido]}\)",
+                "pH = pK_a - log \(\frac{[base conjugada]}{[ácido]}\)",
+                "pH = pK_b + log \(\frac{[base conjugada]}{[ácido]}\)",
+                "pH = pK_b - log \(\frac{[base conjugada]}{[ácido]}\)"
+            ],
+            correct: 0
+        },
+        {
+            question: "¿Qué representa el pK_a de un ácido?",
+            answers: [
+                "El pH en el que la concentración de la base conjugada es igual a la del ácido.",
+                "El pH en el que un ácido fuerte se disocia completamente.",
+                "El pH en el que un ácido no se disocia.",
+                "El pH en el que la base conjugada se disocia completamente."
+            ],
+            correct: 0
+        },
+        {
+            question: "¿Cuál es el resultado de añadir NaOH a una solución de ácido acético \(CH_3COOH\)?",
+            answers: [
+                "Aumento del pH sin formación de buffer.",
+                "Formación de un buffer \(CH_3COO^-\) y aumento del pH.",
+                "Disminución del pH y aumento de \(H^+\).",
+                "No hay cambio en el pH."
+            ],
+            correct: 1
+        },
+        {
+            question: "¿Cuál es la importancia del equilibrio entre \(CO_2\) y \(HCO_3^-\) en el océano?",
+            answers: [
+                "Mantener el pH del océano en un rango básico.",
+                "Acidificar el agua del océano.",
+                "Evitar la precipitación de sales.",
+                "Incrementar la acidez del agua."
+            ],
+            correct: 0
+        },
+        {
+            question: "¿Qué tipo de reacción es utilizada para calcular el pH en soluciones buffer?",
+            answers: [
+                "Reacciones de disociación completa.",
+                "Reacciones de neutralización.",
+                "Reacciones reversibles de disociación parcial.",
+                "Reacciones exotérmicas."
+            ],
+            correct: 2
+        },
+        {
+            question: "¿Cuál es la constante de disociación ácida \(K_a\) para el ácido acético \(CH_3COOH\)?",
+            answers: [
+                "1.8 × 10^{-5}",
+                "4.5 × 10^{-4}",
+                "6.5 × 10^{-2}",
+                "2.5 × 10^{-7}"
+            ],
+            correct: 0
+        },
+        {
+            question: "¿Qué función tiene el NaHCO_3 en una solución buffer?",
+            answers: [
+                "Actúa como una base conjugada que neutraliza ácidos.",
+                "Actúa como un ácido que neutraliza bases.",
+                "Reduce el pH de la solución.",
+                "Aumenta la concentración de \(OH^-\)."
+            ],
+            correct: 0
+        },
+        {
+            question: "¿Cómo se calcula el pH de una solución acuosa que contiene ácido acético y acetato de sodio?",
+            answers: [
+                "Usando la concentración molar del ácido.",
+                "Usando la concentración molar del acetato de sodio.",
+                "Usando la ecuación de Henderson-Hasselbalch.",
+                "Usando la constante de disociación básica \(K_b\)."
+            ],
+            correct: 2
+        },
+        {
+            question: "¿Qué ocurre en la etapa inicial de una reacción de titulación ácido-base?",
+            answers: [
+                "Se alcanza el equilibrio.",
+                "Se calcula el pH final.",
+                "Se añade el titulante y se observan los cambios iniciales.",
+                "Se neutraliza completamente el ácido."
+            ],
+            correct: 2
+        },
+        {
+            question: "¿Cuál es el papel del \(HCO_3^-\) en la regulación del pH en el agua de mar?",
+            answers: [
+                "Neutraliza los ácidos.",
+                "Precipita sales.",
+                "Aumenta el pH por encima de 8.2.",
+                "Mantiene el equilibrio ácido-base al interactuar con \(CO_2\)."
+            ],
+            correct: 3
+        },
+        {
+            question: "¿Cuál es la razón de usar indicadores de pH en experimentos de disoluciones amortiguadoras?",
+            answers: [
+                "Medir el volumen de ácido/base añadido.",
+                "Visualizar el cambio en el color según el pH.",
+                "Determinar la concentración de la solución.",
+                "Medir la temperatura de la solución."
+            ],
+            correct: 1
+        },
+        {
+            question: "¿Qué significa un pH igual a 7?",
+            answers: [
+                "La solución es ácida.",
+                "La solución es básica.",
+                "La solución es neutra.",
+                "La solución es una base débil."
+            ],
+            correct: 2
+        },
+        {
+            question: "¿Qué sucede cuando el pH de la sangre se desvía del rango 7.35-7.45?",
+            answers: [
+                "Se produce una condición llamada acidosis o alcalosis.",
+                "La sangre se vuelve neutra.",
+                "No ocurre ningún cambio significativo.",
+                "Se produce una precipitación de sales en la sangre."
+            ],
+            correct: 0
+        },
+        {
+            question: "¿Cuál es la función principal de una solución amortiguadora?",
+            answers: [
+                "Cambiar rápidamente el pH.",
+                "Mantener el pH constante ante la adición de ácidos o bases.",
+                "Aumentar la concentración de iones \(OH^-\).",
+                "Disminuir la concentración de iones \(H^+\)."
+            ],
+            correct: 1
+        }
     ];
 
     let startTime, endTime;
